style:重构代码，定义tool